--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14",
     "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0"
   },
   "devDependencies": {
     "@angular/cli": "1.6.1",
