--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.6.1",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -27,8 +29,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14",
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.0.0"
+    "typescript": "~2.4.2"
   },
   "devDependencies": {
     "@angular/cli": "1.6.1",
