--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.6.1",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/animations": "^5.0.0",
+    "@angular/cli": "1.6.1",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -26,10 +26,14 @@
     "@angular/router": "^5.0.0",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.0",
+    "angular2-google-recaptcha": "^1.0.3",
     "core-js": "^2.4.1",
+    "ng-recaptcha": "^3.0.3",
+    "ngx-loading": "^1.0.9",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "typings": "^2.1.1",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.1",
